--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9380cf">  <td>14/11/12 09:55:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SmokeTest.afterMethod()[pri:0, instance:script.SmokeTest@ddc652f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@389183515</td>   <td></td> </tr>
-<tr bgcolor="9380cf">  <td>14/11/12 09:53:38</td>   <td>-122258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTest.main()[pri:0, instance:script.SmokeTest@ddc652f]">main</td> 
-  <td>main@389183515</td>   <td></td> </tr>
-<tr bgcolor="9380cf">  <td>14/11/12 09:53:34</td>   <td>-126323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SmokeTest.titleValidation()[pri:0, instance:script.SmokeTest@ddc652f]">&gt;&gt;titleValidation</td> 
-<td>&nbsp;</td>  <td>main@389183515</td>   <td></td> </tr>
+<tr bgcolor="af6bbb">  <td>14/11/12 16:46:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SmokeTest.afterMethod()[pri:0, instance:script.SmokeTest@76f7c5]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1919631490</td>   <td></td> </tr>
+<tr bgcolor="af6bbb">  <td>14/11/12 16:46:42</td>   <td>-3048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTest.main()[pri:0, instance:script.SmokeTest@76f7c5]">main</td> 
+  <td>main@1919631490</td>   <td></td> </tr>
+<tr bgcolor="af6bbb">  <td>14/11/12 16:46:37</td>   <td>-8185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SmokeTest.titleValidation()[pri:0, instance:script.SmokeTest@76f7c5]">&gt;&gt;titleValidation</td> 
+<td>&nbsp;</td>  <td>main@1919631490</td>   <td></td> </tr>
 </table>
